--- a/style.css
+++ b/style.css
@@ -25,5 +25,10 @@
      }
      ul li a:hover {
          background-color:green
-    
+     ul li ul li {
+         display:none;
+     }
+     ul li ul li {
+         display:block;
+     }
    </html>
