--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@
      ul li ul li {
          display:none;
      }
-     ul li ul li:hover {
+     ul li:hover ul li {
          display:block;
      }
    </html>
