--- a/style.css
+++ b/style.css
@@ -13,10 +13,10 @@
      ul li {
          float:left;
          width:200px;
-         height:40px;
+         height:20px;
          background-color:black;
          opacity:.8;
-         line-heigh:40px;
+         line-height:40px;
          text-align:center;
          font-size:20px;
      }
