--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@
          display:block;
      }
      ul li a:hover {
-         background-color:green
+         background-color:green;
      ul li ul li {
          display:none;
      }
