--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 
      body {
-         background: url('trum.jpg') no-repeat;
+         background: url('trump.jpg') no-repeat;
          background-size:cover;
          font-family:Arial;
      }
