--- a/style.css
+++ b/style.css
@@ -13,12 +13,13 @@
      ul li {
          float:left;
          width:200px;
-         height:50px;
+         height:60px;
          background-color:black;
          opacity:.8;
          line-height:40px;
          text-align:center;
          font-size:20px;
+         margin-right:2px;
      }
      ul li a {
          text-decoration:none;
@@ -30,7 +31,7 @@
      ul li ul li {
          display:none;
      }
-     ul li:hover ul li {
+     ul li:hover; ul li {
          display:block;
      }
    
