--- a/shop.css
+++ b/shop.css
@@ -1,4 +1,9 @@
 @charset "utf-8";
+@media screen and (max-width: 900px) {
+      .column {
+            width: 100%;
+      }
+}
 /* CSS Document */
 
 body {
@@ -6,3 +11,6 @@ body {
       font-size: ; /* INSERT FONT SIZE */
       padding: 0px;
       line-height: ; /* INSERT LINE HEIGHT */
+}
+
+#section
