--- a/shop.css
+++ b/shop.css
@@ -1,9 +1,9 @@
 @charset "utf-8";
-@media screen and (max-width: 900px) {
+/* @media screen and (max-width: 900px) {
       .column {
             width: 100%;
       }
-}
+} */
 /* CSS Document */
 
 body {
