--- a/style.css
+++ b/style.css
@@ -13,10 +13,10 @@
      ul li {
          float:left;
          width:400px;
-         height:60px;
+         height:40px;
          background-color:black;
          opacity:.8;
-         line-height:40px;
+         line-height:20px;
          text-align:center;
          font-size:20px;
          margin-right:2px;
@@ -29,9 +29,9 @@
      ul li a:hover {
          background-color:green;
      ul li ul li {
-         display:hide;
+         display:none;
      }
-     ul li:hover; ul li {
+     ul li:hover ul li {
          display:block;
      }
    
