--- a/shop.css
+++ b/shop.css
@@ -5,7 +5,7 @@
       }
 } */
 /* CSS Document */
-@media (min-width: 360px) {
+@media (max-width: 960px) {
       .header { grid-area: header; }
       .menu { grid-area: menu; }
       .banner { grid-area: banner; }
@@ -19,4 +19,6 @@
       .posters { grid-area: posters; }
       .sold out { grid-area: sold out; }
       .limited edition { grid-area: limited edition; }
+      
+      
       
