--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@
          text-align:center;
          font-size:20px;
          margin-right:2px;
+         margin-bottom:4px;
      }
      ul li a {
          text-decoration:none;
