--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 
      body {
-         background: url("Mickey.gif.gif") no-repeat;
+         background: url("mickey.gif") no-repeat;
          background-size:cover;
          font-family:Arial;
      }
