--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@
          text-decoration:none;
          color:#005aff;
          display:block;
-         font-family:fantasy;
+         font-family:script;
      }
      ul li a:hover {
          background-color:#013e03;
