--- a/shop.css
+++ b/shop.css
@@ -35,5 +35,55 @@
       .sold out { grid-area: sold out; }
       .limited edition { grid-area: limited edition; }
       
+#header {
       
+       }
+       
+#menu {
+      
+       }
+       
+#banner {
+      
+       }
+       
+#album1 {
+      
+       }
+       
+#album2 {
+      
+       }
+       
+#tickets{
+      
+       }
+       
+#shirts{
+      
+       }
+       
+#necklaces{
+      
+       }
+       
+#bracelets{
+      
+       }
+       
+#lightsticks{
+      
+       }
+       
+#posters{
+      
+       }
+       
+#sold out{
+      
+       }
+       
+#limited edition{ 
+      
+       }
       
