--- a/team.css
+++ b/team.css
@@ -55,7 +55,7 @@ body {
 /*----The actual photos and sizing of them------*/
 
 #section-c .box-1{
-	background-image:url("../Pictures used in website/HANNAH2-TEAMPROFILE.jpeg");
+	background-image:url("ScitechWebmaster.github.io/Hannah.jpg");
 	background-size: cover;
 	width: 33%;
 	height: 250px;
@@ -64,7 +64,7 @@ body {
 }
 
 #section-c .box-2{
-	background-image:url("../Pictures used in website/STELLA-TEAMPROFILE.jpg");
+	background-image:url("ScitechWebmaster.github.io/Caleb.jpg");
 	background-size:cover;
 	width: 33%;
 	height: 250px;
