--- a/team.css
+++ b/team.css
@@ -64,7 +64,7 @@ body {
 }
 
 #section-c .box-2{
-	background-image:url("ScitechWebmaster.github.io/caleb1.jpg");
+	background-image:url("ScitechWebmaster.github.io/caleb2.jpg");
 	background-size:cover;
 	width: 33%;
 	height: 250px;
@@ -72,7 +72,7 @@ body {
 }
 
 #section-c .box-3{
-	background-image:url("../Pictures used in website/ANIK-TEAMPROFILE.jpg");
+	background-image:url("ScitechWebmaster.github.io/kashish.jpg");
 	background-size: cover;
 	width: 33%;
 	height: 250px;
