--- a/shop.css
+++ b/shop.css
@@ -1,104 +1,114 @@
 @charset "utf-8";
-/* @media screen and (max-width: 900px) {
-      .column {
-            width: 100%;
-      }
-} */
-/* CSS Document */
-@media (max-width: 1334px) {
-      .header { grid-area: header; }
-      .menu { grid-area: menu; }
-      .banner { grid-area: banner; }
-      .album1 { grid-area: album1; }
-      .album2 { grid-area: album2; }
-      .tickets { grid-area: tickets; }
-      .shirts { grid-area: shirts; }
-      .necklaces { grid-area: necklaces; }
-      .bracelets { grid-area: bracelets; }
-      .lightsticks { grid-area: lightsticks; }
-      .posters { grid-area: posters; }
-      .sold out { grid-area: sold out; }
-      .limited edition { grid-area: limited edition; }
-      
- @media (max-width: 960px) {
-      .header { grid-area: header; }
-      .menu { grid-area: menu; }
-      .banner { grid-area: banner; }
-      .album1 { grid-area: album1; }
-      .album2 { grid-area: album2; }
-      .tickets { grid-area: tickets; }
-      .shirts { grid-area: shirts; }
-      .necklaces { grid-area: necklaces; }
-      .bracelets { grid-area: bracelets; }
-      .lightsticks { grid-area: lightsticks; }
-      .posters { grid-area: posters; }
-      .sold out { grid-area: sold out; }
-      .limited edition { grid-area: limited edition; }
-      
-.header {
-      
-       }
-       
-.menu {
-      position:right;
-      height:10%;
-      width:10%;
-       }
-       
-.banner {
-      
-       }
-       
-.album1 {
-      
-       }
-       
-.album2 {
-      
-       }
-       
-.tickets{
-      
-       }
-       
-.shirts{
-      
-       }
-       
-.necklaces{
-      
-       }
-       
-.bracelets{
-      
-       }
-       
-.lightsticks{
-      
-       }
-       
-.posters{
-      
-       }
-       
-.sold out{
-      
-       }
-       
-.limited edition{ 
-      
-       }
-      
-.btn {
-  background-color: DodgerBlue; /* Blue background */
-  border: none; /* Remove borders */
-  color: white; /* White text */
-  padding: 12px 16px; /* Some padding */
-  font-size: 16px; /* Set a font size */
-  cursor: pointer; /* Mouse pointer on hover */
+
+
+body {
+	font-family: "Arsenal Regular",sans-serif;
+	font-size: 20px;
+	padding: 0px;
+	line-height: 2;
 }
 
-/* Darker background on mouse-over */
-.btn:hover {
-  background-color: RoyalBlue;
+#section-b{
+	padding: 20px;
+	background:white;
+	color: black;
+	text-align: center;
+}
+
+
+#section-c{
+	display: flex;
+	
+}
+
+/*-----Contains all the boxes inside------*/
+
+#section-c div{
+	padding: 200px 200px;
+}
+
+
+/*------Boxes color scheme-----*/
+
+#section-c .box-1, #section-c .box-3{
+	background: #295D9B;
+	color: black;
+	
+}
+
+#section-c .box-2{
+	background: #f9f9f9;
+	color: black;
+	
+}
+
+/*----The actual photos and sizing of them------*/
+
+#section-c .box-1{
+	background-image:url("../Pictures used in website/HANNAH2-TEAMPROFILE.jpeg");
+	background-size: cover;
+	width: 33%;
+	height: 250px;
+	
+	
+}
+
+#section-c .box-2{
+	background-image:url("../Pictures used in website/STELLA-TEAMPROFILE.jpg");
+	background-size:cover;
+	width: 33%;
+	height: 250px;
+
+}
+
+#section-c .box-3{
+	background-image:url("../Pictures used in website/ANIK-TEAMPROFILE.jpg");
+	background-size: cover;
+	width: 33%;
+	height: 250px;
+}
+
+#section-d {
+	display: flex;
+	text-align: center;
+	overflow: hidden;
+	list-style: none;
+	font-size: 20px;
+	color: black;
+	text-decoration: none;
+	background: white;
+}
+
+#section-d div{
+	padding:50px;
+	padding-bottom:400px;
+
+}
+
+
+#section-d .box-4, #section-d .box-5, #section-d .box-6{
+	background: white;
+	color: #295D9B;
+	text-align:center;
+	
+}
+
+#section-d .box-4{
+	height: 50px;
+	width: 33%;
+	text-align:center;
+}
+
+#section-d .box-5{
+	height:50px;
+	width: 33%;
+	background-size:cover;
+	text-align:center;
+}
+
+#section-d .box-6{
+	background-size:cover;
+	height:50px;
+	width: 33%;
+	text-align:center;
 }
