--- a/shop.css
+++ b/shop.css
@@ -64,7 +64,7 @@ body {
 }
 
 #section-c .box-2{
-	background-image:url("ScitechWebmaster.github.io/caleb3.jpg");
+	background-image:url("ScitechWebmaster.github.io/relaxsticker.jpg");
 	background-size:cover;
 	width: 33%;
 	height: 250px;
@@ -72,7 +72,7 @@ body {
 }
 
 #section-c .box-3{
-	background-image:url("ScitechWebmaster.github.io/kashish.jpg");
+	background-image:url("ScitechWebmaster.github.io/tokyotour.jpg");
 	background-size: cover;
 	width: 33%;
 	height: 250px;
