--- a/shop.css
+++ b/shop.css
@@ -55,7 +55,7 @@ body {
 /*----The actual photos and sizing of them------*/
 
 #section-c .box-1{
-	background-image:url("ScitechWebmaster.github.io/Hannah.jpg");
+	background-image:url("ScitechWebmaster.github.io/tokyotour.jpg");
 	background-size: cover;
 	width: 33%;
 	height: 250px;
