--- a/shop.css
+++ b/shop.css
@@ -106,7 +106,7 @@ body {
 /*----The actual photos and sizing of them------*/
 
 #section-c .box-1{
-	background-image:url("ScitechWebmaster.github.io/tokyotour.jpg");
+	background-image:url("ScitechWebmaster.github.io/tokyof.jpg");
 	background-size: cover;
 	width: 33%;
 	height: 250px;
@@ -115,7 +115,7 @@ body {
 }
 
 #section-c .box-2{
-	background-image:url("ScitechWebmaster.github.io/relaxsticker.jpg");
+	background-image:url("ScitechWebmaster.github.io/relaxf.jpg");
 	background-size:cover;
 	width: 33%;
 	height: 250px;
@@ -123,7 +123,7 @@ body {
 }
 
 #section-c .box-3{
-	background-image:url("ScitechWebmaster.github.io/kashishf.jpg");
+	background-image:url("ScitechWebmaster.github.io/tokyof.jpg");
 	background-size: cover;
 	width: 33%;
 	height: 250px;
