--- a/team.css
+++ b/team.css
@@ -72,7 +72,7 @@ body {
 }
 
 #section-c .box-3{
-	background-image:url("ScitechWebmaster.github.io/kashish.jpg");
+	background-image:url("ScitechWebmaster.github.io/kashishf.jpg");
 	background-size: cover;
 	width: 33%;
 	height: 250px;
