--- a/shop.css
+++ b/shop.css
@@ -123,7 +123,7 @@ body {
 }
 
 #section-c .box-3{
-	background-image:url("ScitechWebmaster.github.io/tokyof.jpg");
+	background-image:url("ScitechWebmaster.github.io/caps.jpg");
 	background-size: cover;
 	width: 33%;
 	height: 250px;
