--- a/events.css
+++ b/events.css
@@ -1,7 +1,75 @@
 
+@charset "utf-8";
+/* CSS Document */
 
 
 body {
-    	color:#1d1145;
+	font-family: "Arsenal Regular",sans-serif;
+	font-size: 20px;
+	padding: 0px;
+	line-height: 2;
 }
 
+/*------Meet the Team------*/
+
+#section-b{
+	padding: 20px;
+	background:white;
+	color: black;
+	text-align: center;
+}
+
+/*------Bios------*/
+
+
+#section-d {
+	display: flex;
+	text-align: center;
+	overflow: hidden;
+	list-style: none;
+	font-size: 20px;
+	color: black;
+	text-decoration: none;
+	background: white;
+}
+
+#section-d div{
+	padding:50px;
+	padding-bottom:400px;
+
+}
+
+
+#section-d .box-4, #section-d .box-5, #section-d .box-6{
+	background: white;
+	color: #295D9B;
+	text-align:center;
+	
+}
+
+#section-d .box-4{
+	height: 50px;
+	width: 7.5%;
+	text-align:center;
+}
+
+#section-d .box-5{
+	height:50px;
+	width: 37.5%;
+	background-size:cover;
+	text-align:center;
+}
+
+#section-d .box-6{
+	background-size:cover;
+	height:50px;
+	width: 37.5%;
+	text-align:center;
+}
+
+#section-d .box-7{
+	background-size:cover;
+	height:50px;
+	width: 7.5%;
+	text-align:center;
+}
