--- a/team.css
+++ b/team.css
@@ -64,7 +64,7 @@ body {
 }
 
 #section-c .box-2{
-	background-image:url("ScitechWebmaster.github.io/calebf.jpg");
+	background-image:url("ScitechWebmaster.github.io/caleb5.jpg");
 	background-size:cover;
 	width: 33%;
 	height: 250px;
