--- a/team.css
+++ b/team.css
@@ -64,7 +64,7 @@ body {
 }
 
 #section-c .box-2{
-	background-image:url("ScitechWebmaster.github.io/calebfinall.jpg");
+	background-image:url("ScitechWebmaster.github.io/cfinal.jpg");
 	background-size:cover;
 	width: 33%;
 	height: 250px;
@@ -72,7 +72,7 @@ body {
 }
 
 #section-c .box-3{
-	background-image:url("ScitechWebmaster.github.io/kashishf.jpg");
+	background-image:url("ScitechWebmaster.github.io/kfinal.jpg");
 	background-size: cover;
 	width: 33%;
 	height: 250px;
