--- a/events.css
+++ b/events.css
@@ -51,7 +51,7 @@ body {
 	height: 50px;
 	width: 10%;
 	text-align:center;
-	background-color:blue;
+	background-color:#668cff;
 }
 
 #section-d .box-5{
@@ -67,7 +67,7 @@ body {
 	height:50px;
 	width: 10%;
 	text-align:center;
-	background-color:blue;
+	background-color:#668cff;
 }
 
 #section-d .box-7{
