--- a/team.css
+++ b/team.css
@@ -55,7 +55,7 @@ body {
 /*----The actual photos and sizing of them------*/
 
 #section-c .box-1{
-	background-image:url("ScitechWebmaster.github.io/Hannah.jpg");
+	background-image:url("ScitechWebmaster.github.io/hannahf.jpg");
 	background-size: cover;
 	width: 33%;
 	height: 250px;
@@ -64,7 +64,7 @@ body {
 }
 
 #section-c .box-2{
-	background-image:url("ScitechWebmaster.github.io/calebb.jpg");
+	background-image:url("ScitechWebmaster.github.io/calebfin.jpg");
 	background-size:cover;
 	width: 33%;
 	height: 250px;
@@ -72,7 +72,7 @@ body {
 }
 
 #section-c .box-3{
-	background-image:url("ScitechWebmaster.github.io/kfinal.jpg");
+	background-image:url("ScitechWebmaster.github.io/kashishfin.jpg");
 	background-size: cover;
 	width: 33%;
 	height: 250px;
