--- a/events.css
+++ b/events.css
@@ -50,6 +50,7 @@ body {
 #section-d .box-4{
 	height: 50px;
 	width: 10%;
+	align:left;
 	text-align:center;
 	background-color:#668cff;
 }
@@ -57,6 +58,7 @@ body {
 #section-d .box-8{
 	height: 50px;
 	width: 10%;
+	align:right;
 	text-align:center;
 	background-color:#668cff;
 }
