--- a/events.css
+++ b/events.css
@@ -57,7 +57,9 @@ body {
 
 #section-d .box-8{
 	height: 50px;
-	width: 15%;
+	width: 10%;
+	padding-left:10px;
+	padding-right:0px;
 	text-align:center;
 	background-color:#668cff;
 }
